--- a/src/main/res/layout/left_menu_item.xml
+++ b/src/main/res/layout/left_menu_item.xml
@@ -15,9 +15,12 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{clickListener.onClick}">
+        android:background="@drawable/new_bg_left_menu_item_selector"
+        android:onClick="@{clickListener.onClick}"
+        app:selected="@{viewModel.isSelected}">
 
         <View
             style="@style/LeftMenuDivider"
