--- a/src/main/res/layout/left_menu_header.xml
+++ b/src/main/res/layout/left_menu_header.xml
@@ -22,7 +22,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:text="@{viewModel.text}" />
+            android:gravity="center"
+            android:text="@{viewModel.text}"
+            android:textColor="#000000" />
     </LinearLayout>
 </layout>
 
