--- a/src/main/res/layout/fragment_menu.xml
+++ b/src/main/res/layout/fragment_menu.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_left_menu_normal"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ListView
-        android:id="@+id/lvMenu"
-        style="@style/LeftMenuSelector"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        android:fadingEdgeLength="20dp"
-        android:requiresFadingEdge="vertical"
-        tools:ignore="UnusedAttribute" />
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_left_menu_normal">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:targetApi="ice_cream_sandwich" />
+    </LinearLayout>
+</layout>
