--- a/src/main/res/layout/left_menu_header.xml
+++ b/src/main/res/layout/left_menu_header.xml
@@ -23,6 +23,7 @@
 
         <ImageView
             style="@style/LeftMenuHeaderBackground"
+            android:layout_height="86dp"
             android:layout_marginTop="86dp"
             android:background="@drawable/gradient_bg" />
 
