hide empties view image in landscape

--- a/src/main/res/layout/layout_paid_likes_for_vip.xml
+++ b/src/main/res/layout/layout_paid_likes_for_vip.xml
@@ -14,6 +14,7 @@
 
         <LinearLayout
             android:id="@+id/ivAvatars"
+            style="@style/EmptyFeedsViewImageVisibility"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
