--- a/src/main/res/layout/layout_empty_admirations.xml
+++ b/src/main/res/layout/layout_empty_admirations.xml
@@ -50,6 +50,7 @@
             </LinearLayout>
 
             <ImageView
+                style="@style/EmptyFeedsViewImageVisibility"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/tvText"
@@ -73,6 +74,7 @@
                 android:gravity="center" />
 
             <LinearLayout
+                style="@style/EmptyFeedsViewImageVisibility"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
