--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/ic_guitar"
+        style="@style/EmptyFeedsViewImageVisibility"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/tvText"
