--- a/src/main/res/layout/layout_empty_likes.xml
+++ b/src/main/res/layout/layout_empty_likes.xml
@@ -39,6 +39,7 @@
         </LinearLayout>
 
         <ImageView
+            style="@style/EmptyFeedsViewImageVisibility"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/tvText"
@@ -62,6 +63,7 @@
             android:gravity="center" />
 
         <LinearLayout
+            style="@style/EmptyFeedsViewImageVisibility"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
