--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -50,4 +50,4 @@
             style="@style/WhiteListItem.Underline"
             android:text="@string/settings_about" />
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
