--- a/src/main/res/layout/empty.xml
+++ b/src/main/res/layout/empty.xml
@@ -7,6 +7,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
         android:textColor="@color/vk_black"
         android:textSize="49dp"
         android:text="E M P T Y"/>
