#49639: refactor feeds fields

--- a/src/main/res/layout/item_feed_layout_time.xml
+++ b/src/main/res/layout/item_feed_layout_time.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    style="@style/ListItemContainer"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ListItemContainer">
 
     <include
         android:id="@+id/ifp_avatar"
-        layout="@layout/item_feed_part_avatar"/>
+        layout="@layout/item_feed_part_avatar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/ifp_avatar"
-        android:paddingBottom="1dp"
-        android:orientation="vertical">
-
+        android:paddingBottom="1dp">
 
         <LinearLayout
             android:id="@+id/ifp_name_container"
@@ -23,14 +20,13 @@
             android:layout_alignParentLeft="true"
             android:orientation="horizontal">
 
-            <include
-                layout="@layout/item_feed_part_name"/>
+            <include layout="@layout/item_feed_part_name" />
 
             <include
                 android:id="@+id/ifp_time"
                 layout="@layout/item_feed_part_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
@@ -40,6 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/ifp_name_container"/>
+            android:layout_below="@+id/ifp_name_container" />
     </RelativeLayout>
 </RelativeLayout>
