--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -414,10 +414,12 @@
     </style>
 
     <style name="ListTime">
-        <item name="android:gravity">right|center_vertical</item>
         <item name="android:textColor">@color/list_time</item>
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:lines">1</item>
+        <item name="android:ellipsize">none</item>
     </style>
 
     <style name="ListMessageText">
