--- a/src/main/res/layout/item_feed_layout_time_count.xml
+++ b/src/main/res/layout/item_feed_layout_time_count.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/ifp_text"
                 layout="@layout/item_feed_part_text"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
             <include
