#14217: add scroll to all empty views, show auth fragment loader in the center of the screen

--- a/src/main/res/layout/layout_empty_bookmarks.xml
+++ b/src/main/res/layout/layout_empty_bookmarks.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fadingEdge="none"
+    android:fillViewport="true">
 
     <LinearLayout
         style="@style/EmptyFeedsViewGravity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
@@ -33,4 +35,4 @@
             style="@style/BigStretchedBlueButton"
             android:text="@string/general_get_dating" />
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
