--- a/src/main/res/layout/fragment_auth.xml
+++ b/src/main/res/layout/fragment_auth.xml
@@ -34,18 +34,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ProgressBar
-                        android:id="@+id/prsAuthLoading"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/ivAuthGroup"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="220dp"
-                        android:indeterminate="true"
-                        android:indeterminateDrawable="@drawable/auth_progressbar_drawable"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
-
                     <ImageView
                         android:id="@+id/tf_auth_back"
                         android:layout_width="wrap_content"
@@ -56,7 +44,7 @@
                         android:visibility="gone" />
 
                     <LinearLayout
-                        android:id="@id/ivAuthGroup"
+                        android:id="@+id/ivAuthGroup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
@@ -135,5 +123,14 @@
                 android:text="@{handler.getOtherServicesButtonText}"
                 android:textColor="@color/auth_fragment_text_color" />
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/prsAuthLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/auth_progressbar_drawable"
+            android:visibility="gone" />
     </FrameLayout>
 </layout>
