--- a/src/main/res/layout/layout_empty_blacklist.xml
+++ b/src/main/res/layout/layout_empty_blacklist.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true">
+    android:clickable="true"
+    android:fadingEdge="none"
+    android:fillViewport="true">
 
     <TextView
         style="@style/ListItemEmptyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:text="@string/black_list_empty" />
 
-</RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
