--- a/src/main/res/layout/layout_empty_admirations.xml
+++ b/src/main/res/layout/layout_empty_admirations.xml
@@ -54,9 +54,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal|top"
-            android:orientation="vertical"
-            android:paddingTop="24dp">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvTitle"
@@ -66,6 +65,7 @@
                 android:gravity="center" />
 
             <LinearLayout
+                style="@style/LandscapePortraitImagesVisibility"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
