--- a/src/main/res/layout/item_feed_layout_heart.xml
+++ b/src/main/res/layout/item_feed_layout_heart.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    style="@style/ListItemContainer"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ListItemContainer">
 
     <include
         android:id="@+id/ifp_avatar"
         layout="@layout/item_feed_part_avatar" />
 
-    <ImageView
-        android:id="@+id/ifp_heart"
-        style="@style/FeedHeart.Selector" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/ifp_avatar"
-        android:layout_toLeftOf="@+id/ifp_heart"
-        android:paddingBottom="1dp"
-        android:orientation="vertical">
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingBottom="1dp">
 
-        <include layout="@layout/item_feed_part_name" />
+        <include
+            layout="@layout/item_feed_part_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/ifp_text"
@@ -28,4 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-</RelativeLayout>
+
+    <ImageView
+        android:id="@+id/ifp_heart"
+        style="@style/FeedHeart.Selector" />
+</LinearLayout>
