--- a/src/main/res/layout/fragment_about.xml
+++ b/src/main/res/layout/fragment_about.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:fadingEdge="none"
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/ivLogo"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/topface_logo" />
-
-    <TextView
-        android:id="@+id/tvVersion"
-        style="@style/GrayText.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:gravity="center" />
-
-    <TextView
-        android:id="@+id/tvCopyright"
-        style="@style/GrayText.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:gravity="center" />
-
-    <TextView
-        android:id="@+id/tvExtra"
-        style="@style/GrayText.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:textColor="#2392d0" />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:src="@drawable/topface_logo" />
+
+        <TextView
+            android:id="@+id/tvVersion"
+            style="@style/GrayText.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/tvCopyright"
+            style="@style/GrayText.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/tvExtra"
+            style="@style/GrayText.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:gravity="center"
+            android:textColor="#2392d0" />
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
