--- a/src/main/res/layout/fragment_sms_invite.xml
+++ b/src/main/res/layout/fragment_sms_invite.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content_container"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/bg_white">
 
     <ListView
         android:id="@+id/content_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:cacheColorHint="#00000000"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
@@ -27,6 +27,7 @@
         android:id="@+id/no_contacts_available"
         style="@style/SMSInviteText"
         android:layout_centerInParent="true"
+        android:background="@color/bg_white"
         android:gravity="center"
         android:text="@string/no_contacts_available"
         android:visibility="gone" />
