--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -114,4 +114,5 @@
     <dimen name="left_menu_avatar_width">64dp</dimen>
     <dimen name="left_menu_header_pading_left">16dp</dimen>
     <dimen name="left_menu_header_pading_top">16dp</dimen>
+    <dimen name="left_menu_header_pading_right">10dp</dimen>
 </resources>
