--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -187,4 +187,8 @@
     <color name="left_menu_bage_text">@color/bg_white</color>
     <color name="left_menu_bage_background">#499AFF</color>
     <color name="left_mneu_users_city_color">#80ffffff</color>
+
+    <!--Offerwalls-->
+    <color name="offerwalls_title_text_color">#232C35</color>
+    <color name="offerwalls_description_text_color">#607D8B</color>
 </resources>
