--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -187,4 +187,6 @@
     <color name="left_menu_bage_text">@color/bg_white</color>
     <color name="left_menu_bage_background">#499AFF</color>
     <color name="left_mneu_users_city_color">#80ffffff</color>
+
+    <color name="our_ad_feed_banner">#607a86</color>
 </resources>
